[gd_scene load_steps=6 format=3 uid="uid://c5cavwa2xdt0b"]

[ext_resource type="Script" path="res://src/ui_widgets/palette_config.gd" id="1_2fy8k"]
[ext_resource type="Script" path="res://src/ui_widgets/BetterLineEdit.gd" id="2_coqnx"]
[ext_resource type="FontFile" uid="uid://clpf84p1lfwlp" path="res://assets/fonts/Font.ttf" id="2_cttpy"]
[ext_resource type="Texture2D" uid="uid://dbyjet4nt246k" path="res://assets/icons/Warning.svg" id="4_43bpt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lq3bn"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.34902, 0.501961, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PaletteConfig" type="PanelContainer"]
offset_right = 21.0
offset_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme_type_variation = &"SpaciousPanel"
script = ExtResource("1_2fy8k")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 6

[node name="PaletteButton" type="Button" parent="MainContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"TranslucentButton"

[node name="NameEdit" type="LineEdit" parent="MainContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
theme_override_fonts/font = ExtResource("2_cttpy")
theme_override_styles/normal = SubResource("StyleBoxFlat_lq3bn")
alignment = 1
max_length = 30
script = ExtResource("2_coqnx")

[node name="ColorsContainer" type="HFlowContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 3

[node name="WarningSign" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="WarningSign"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_bottom = 16.0
grow_horizontal = 0
texture = ExtResource("4_43bpt")
stretch_mode = 3
